removed some spacing issues

--- a/src/Components/GameFeatures/GameFeatures.css
+++ b/src/Components/GameFeatures/GameFeatures.css
@@ -10,9 +10,10 @@
 
 .game-features-heading{
     color: #fff;
-    width: 70%;
+    width: 64%;
     letter-spacing: 0.03rem;
-    font-size: 31px;
+    line-height: 42px;
+    font-size: 42px;
     margin: auto;
 }
 
@@ -257,6 +258,11 @@
 
         .game-features-heading{
             width: 100%;
+            font-size: 28px;
+            line-height:33.04px;
+            font-weight: 400;
+            font-style: italic;
+            width: 80%;
         }
     
 
