--- a/src/Components/GameFeatures/GameModes/GameModes.css
+++ b/src/Components/GameFeatures/GameModes/GameModes.css
@@ -1,5 +1,5 @@
 .game-modes-container{
-    margin-top: 18rem;
+    margin-top: 15rem;
     background-image: url('../../../assets/Layer_1.svg');
 
 }
